--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
+*{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 body {
-    background-color: rgb(197, 90, 90);
-}
+    background-color: #f87171;
 
-h1 {
-    color: rgb(178, 236, 91);
-}
 
-h2 {
-    color: blanchedalmonds;
+    color:#bef264 ;
+
 }
+ h1 {
+    color: #fde047;
+ }
+ h2 {
+    color: #fde047;
+ }
+ h3 {
+    color: #fde047;
+ }
